<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewarea"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AreaActivity">

    <EditText
        android:id="@+id/tlHeightUser"
        android:layout_width="58dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/ptBaseUserHint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBase"
        app:layout_constraintVertical_bias="0.253" />

    <ImageView
        android:id="@+id/imgvArea"
        android:layout_width="159dp"
        android:layout_height="156dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/imgvArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleArea"
        app:srcCompat="@drawable/triangulo" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="58dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/ptHeightUserHint"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.607"
        app:layout_constraintStart_toEndOf="@+id/tlHeightUser"
        app:layout_constraintTop_toBottomOf="@+id/tvHeigth"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/tvHeigth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/tvComponentHeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCalcular" />

    <TextView
        android:id="@+id/tvBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/tvComponentBase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCalcular" />

    <TextView
        android:id="@+id/tvCalcular"
        android:layout_width="321dp"
        android:layout_height="87dp"
        android:layout_marginTop="76dp"
        android:text="@string/tvCalculateArea"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.587"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvArea" />

    <TextView
        android:id="@+id/tvTitleArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/tvTitlevArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>